--- a/pom.xml
+++ b/pom.xml
@@ -4,24 +4,41 @@
   <groupId>it.pad</groupId>
   <artifactId>pagerank</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.2</version>
   <name>pagerank</name>
   <url>http://maven.apache.org</url>
 
-	<build><plugins><plugin>
-		<artifactId>maven-compiler-plugin</artifactId>
-		<version>3.0</version>
-		<configuration>
-			<source>1.7</source>
-			<target>1.7</target>
-			<encoding>${project.build.sourceEncoding}</encoding>
-		</configuration></plugin><plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-jar-plugin</artifactId>
-		<configuration><archive><manifest>
-			<addClasspath>true</addClasspath>
-		</manifest></archive></configuration>
-	</plugin></plugins></build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.6.1</version>
+				<configuration>
+				<!-->		
+					<compilerArgs>
+						<arg>-verbose</arg>
+						<arg>-Xlint:unchecked</arg>
+					</compilerArgs>
+				<-->
+					<source>1.7</source>
+					<target>1.7</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
   <dependencies>
     <dependency>
