--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>it.pad</groupId>
   <artifactId>pagerank</artifactId>
   <packaging>jar</packaging>
-  <version>0.2</version>
+  <version>1.0</version>
   <name>pagerank</name>
   <url>http://maven.apache.org</url>
 
@@ -15,7 +15,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.6.1</version>
 				<configuration>
-				<!-->		
+				<!-->	uncomment this to add options to java compiler	<-->
+				<!-->
 					<compilerArgs>
 						<arg>-verbose</arg>
 						<arg>-Xlint:unchecked</arg>
@@ -39,14 +40,7 @@
 			</plugin>
 		</plugins>
 	</build>
-
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+	<dependencies>
 
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
